--- a/www/_cms/edit.tpl.html
+++ b/www/_cms/edit.tpl.html
@@ -1,35 +1,32 @@
 <section id="edit" class="view">
 
-    <div class="row">
-        <div class="columns small-12" >
 
             <div class="row loading" ng-if="! formdata">
-                <div class="columns small-12 text-center">
+                <div class="col-sm-12 text-center">
                     <div ng-svg-loading="spin"> </div>
                 </div>
             </div>
-
-            <div class="text-right" ng-show="formdata">
-                <button class="delete tiny" ng-if="id != 'add'" ng-click="delete(id, id)"  ng-disabled="processing">Delete</button>
+            <div class="row">
+            <div class="col-sm-12 text-right" ng-show="formdata">
+                <button class="btn btn-sm btn-danger" ng-if="id != 'add'" ng-click="delete(id, id)"  ng-disabled="processing">Delete</button>
+            </div>
             </div>
 
-            <form ng-submit="save(formdata)" novalidate="" name="form" ng-class="'state-'+state" ng-show="formdata">
+            <form class="form-horizontal" ng-submit="save(formdata)" novalidate="" name="form" ng-class="'state-'+state" ng-show="formdata">
 
                 <fieldset>
 
 
 
-                    <div class="row field" ng-repeat="field in fields">
-                        <div class="small-3 columns">
-                            <label for="field-{{field.name}}" class="right inline">
+                    <div class="form-group field" ng-repeat="field in fields">
+                            <label for="field-{{field.name}}" class="col-sm-3">
                                 {{field.label}}<ng-switch on="field.type"><small ng-switch-when="image"><br/>({{field.width}}px * {{field.height}}px)</small>
                                 </ng-switch><span ng-if="field.required">*</span>
                             </label>
-                        </div>
-                        <div class="small-9 columns">
+                        <div class="col-sm-9">
                         <ng-switch on="field.type">
                             <!-- text -->
-                            <input ng-switch-when="text" type="text" id="field-{{field.name}}" ng-required="field.required"
+                            <input class="form-control" ng-switch-when="text" type="text" id="field-{{field.name}}" ng-required="field.required"
                                    ng-model="formdata[field.name]" ng-input-name="field.name" placeholder="{{field.label}}">
                             <!-- checkbox -->
                             <input ng-switch-when="checkbox" type="checkbox" id="field-{{field.name}}"  ng-required="field.required"
@@ -37,7 +34,7 @@
                                    ng-true-value="1" ng-false-value="0"
                                     >
                             <!-- radio -->
-                            <div ng-switch-when="radio">
+                            <div class="radio" ng-switch-when="radio">
                                 <label class="radio" for="field-{{field.name}}-{{val.label}}" ng-repeat="val in field.values">{{val.label}}
                                 <input type="radio"
                                        id="field-{{field.name}}-{{val.label}}"  ng-required="field.required"
@@ -47,7 +44,7 @@
                                 </label>
                             </div>
                             <!-- textarea -->
-                            <textarea ng-switch-when="textarea" id="field-{{field.name}}"  ng-required="field.required"
+                            <textarea class="form-control" ng-switch-when="textarea" id="field-{{field.name}}"  ng-required="field.required"
                                       ng-model="formdata[field.name]" placeholder="{{field.label}}">
 
                             </textarea>
@@ -72,7 +69,7 @@
 
                     <div class="errors ng-cloak" ng-show="state == 'submitted' && form.$invalid">
                     <div class="row">
-                        <div class="columns small-offset-3 small-9">
+                        <div class="col-sm-offset-3 col-sm-9">
                             <div >
 
                                 <!--
@@ -94,7 +91,7 @@
                     </div>
 
                     <div class="row success" ng-show="state == 'complete' && form.$pristine">
-                        <div class="columns small-12 small-9 small-offset-3">
+                        <div class="col-sm-offset-3 col-sm-9">
                             <p>Saved !</p>
                         </div>
                     </div>
@@ -102,16 +99,14 @@
 
 
                     <div class="row">
-                        <div class="columns small-9 small-offset-3">
-                            <a href="" class="button cancel" ng-click="cancel($event)" ng-disabled="processing">Cancel</a>
-                            <button type="submit"  ng-disabled="processing">Save</button>
+                        <div class="col-sm-offset-3 col-sm-9">
+                            <a href="" class="btn btn-warning" ng-click="cancel($event)" ng-disabled="processing">Cancel</a>
+                            <button class="btn btn-primary" type="submit"  ng-disabled="processing">Save</button>
                         </div>
                     </div>
                 </fieldset>
             </form>
 
-        </div>
-    </div>
 
 
 </section>
