--- a/www/_cms/index.dev.html
+++ b/www/_cms/index.dev.html
@@ -1,8 +1,13 @@
-<!doctype html>
-<html class="no-js" lang="en">
+<!DOCTYPE html>
+<html>
+
 <head>
+
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Start Bootstrap - SB Admin Version 2.0 Demo</title>
+
     <title ng-bind="doctitle"></title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -10,112 +15,64 @@
     <script src='assets/js/libs/modernizr.custom-2.6.2.min.js'></script>
 
 </head>
-<body  ng-controller="AppController" ng-class="pageClass">
 
-
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
+<body ng-controller="AppController" ng-class="pageClass">
+<div class="page-wrap">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <button type="button" class="navbar-toggle" ng-click="sidebarCollapsed = !sidebarCollapsed">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Project name</a>
-        </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Dashboard</a></li>
-                <li><a href="#">Settings</a></li>
-                <li><a href="#">Profile</a></li>
-                <li><a href="#">Help</a></li>
-            </ul>
-            <form class="navbar-form navbar-right">
-                <input type="text" class="form-control" placeholder="Search...">
-            </form>
-        </div>
-    </div>
-</div>
-
-
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar" style="position: fixed">
-            <ul class="nav nav-sidebar">
-                <li class="active"><a href="#">Overview</a></li>
-                <li><a href="#">Reports</a></li>
-                <li><a href="#">Analytics</a></li>
-                <li><a href="#">Export</a></li>
-            </ul>
-            <ul class="nav nav-sidebar">
-                <li><a href="">Nav item</a></li>
-                <li><a href="">Nav item again</a></li>
-                <li><a href="">One more nav</a></li>
-                <li><a href="">Another nav item</a></li>
-                <li><a href="">More navigation</a></li>
-            </ul>
-            <ul class="nav nav-sidebar">
-                <li><a href="">Nav item again</a></li>
-                <li><a href="">One more nav</a></li>
-                <li><a href="">Another nav item</a></li>
-            </ul>
-        </div>
-
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-
-            <div ng-view class="app-view"></div>
-
-        </div>
-    </div>
-</div>
-
-
-
-    <header>
-        <div class="container">
+            <a class="" href="index.html">
                 <h1>
-                    <span ng-if="config.clientLogo"><img ng-src="{{config.clientLogo}}" title="{{config.sitetitle}}"/></span>
+                <span ng-if="config.clientLogo"><img ng-src="{{config.clientLogo}}"
+                                                     title="{{config.sitetitle}}"/></span>
                     <span ng-if="!config.clientLogo">{{config.sitetitle}}</span>
-                    </h1>
+                </h1>
+            </a>
         </div>
-    </header>
+
+    </nav>
 
 
+    <div class="navbar-default navbar-static-side" role="navigation">
+        <div class="sidebar-collapse" data-collapse="sidebarCollapsed" ng-controller="SidebarController">
+            <ul class="nav" id="side-menu">
 
-    <div class="app-container" ng-cloak>
-        <div class="inner container">
-
-                    <h2><a ng-href="#!/home">{{config.sitetitle}}</a> <span ng-if="currenttable">/ <a ng-href="#!/list/{{currenttable}}">{{currenttable}}</a></span> <span ng-if="title">/ {{title}}</span></h2>
-
+                <li ng-repeat="(key, row) in tables">
+                    <a ng-href="#!/list/{{key}}">{{row.title}}</a>
+                </li>
 
 
-
-
+            </ul>
         </div>
     </div>
 
+    <div class="main container-fluid">
+        <div class="row">
+            <div class="col-sm-12">
+                <h1 class="page-header">{{currenttable}}</h1>
+            </div>
+        </div>
 
-    <footer>
+        <div class="row">
+            <div class="col-md-12" ng-view>
+            </div>
+        </div>
+
+    </div>
+
+    <footer class="footer">
 
         <div class="container text-right">
-                {{config.sitetitle}} &copy; {{config.client}}
+            {{config.sitetitle}} &copy; {{config.client}}
         </div>
     </footer>
 
-
-<!--[if lte IE 9]>
-    <div id="ie-warning">
-        <h2>Sorry, a newer browser is<br/> required to view this site.</h2>
-        <h3>Please try <a href="http://browsehappy.com/" target="_blank">upgrading to a different browser</a> or<br/> <a
-                href="javascript:loadwindow('http://www.google.com/chromeframe/', {width:800})">install Google Chrome
-            Frame</a>.
-        </h3>
-        <a class="close" href="javascript:document.getElementById('ie-warning').style.display = 'none';void(0);">close</a>
-    </div>
-<![endif]-->
-
-
+</div>
 <!-- js libraries -->
 <script src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js'></script>
 <script src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js'></script>
@@ -136,10 +93,6 @@
 <!--SCRIPTS END-->
 
 
-
-
-
-
-
 </body>
+
 </html>
