--- a/www/_cms/login.tpl.html
+++ b/www/_cms/login.tpl.html
@@ -1,5 +1,8 @@
 <section id="login" class="view">
 
+    <div class="container">
+
+        <h1 class="page-header">Sign in</h1>
 
             <form class="form-horizontal" ng-submit="save(formdata)" novalidate="" name="form" ng-class="'state-'+state">
                 <fieldset>
@@ -39,12 +42,18 @@
 
                     <div class="row">
                         <div class="col-sm-offset-3 col-sm-9">
-                            <button type="submit" class="btn btn-primary" ng-disabled="processing">Login</button>
+                            <button type="submit" class="btn btn-lg btn-block btn-primary" ng-disabled="processing">Sign in</button>
                         </div>
                     </div>
                 </fieldset>
             </form>
 
+
+
+
+
+
+    </div>
 
 
 </section>
