--- a/www/_ngadmin/index.dev.html
+++ b/www/_ngadmin/index.dev.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Start Bootstrap - SB Admin Version 2.0 Demo</title>
+    <title>ngAdmin</title>
 
     <title ng-bind="doctitle"></title>
 
@@ -108,10 +107,7 @@
 
 <!-- js builds -->
 
-<!--SCRIPTS-->
-<script src="assets/js/build/ngadmin-plugins-min.js"></script>
-<script src="assets/js/build/ngadmin-app-min.js"></script>
-<!--SCRIPTS END-->
+<!--SCRIPTS--><script src="../../src/bower/angular-deferred-bootstrap/angular-deferred-bootstrap.js"></script><script src="../../src/js/plugins/ui-bootstrap-tpls-0.11.0-SNAPSHOT.js"></script><script src="../../src/js/plugins/log.js"></script><script src="../../src/js/utils/md5.js"></script><script src="../../src/js/plugins/canvasResize/binaryajax.js"></script><script src="../../src/js/plugins/canvasResize/exif.js"></script><script src="../../src/js/plugins/canvasResize/canvasResize.js"></script><script src="../../src/js/app/booter.js"></script><script src="../../src/js/app/AppConfig.js"></script><script src="../../src/js/app/filters.js"></script><script src="../../src/js/app/directives/ngCkeditor.js"></script><script src="../../src/js/app/directives/ngFileReaderImage.js"></script><script src="../../src/js/app/directives/ngInputName.js"></script><script src="../../src/js/app/directives/ngSvgLoading.js"></script><script src="../../src/js/app/routeService.js"></script><script src="../../src/js/app/apiService.js"></script><script src="../../src/js/app/eventService.js"></script><script src="../../src/js/app/AppController.js"></script><script src="../../src/js/app/SidebarController.js"></script><script src="../../src/js/app/ModalInstanceController.js"></script><script src="../../src/js/app/EditController.js"></script><script src="../../src/js/app/ListController.js"></script><script src="../../src/js/app/LoginController.js"></script><script src="../../src/js/app/HomeController.js"></script><!--SCRIPTS END-->
 
 
 </body>
